--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,20 @@
 }
 
 .game-board {
-    width: 80%;
+    width: 100%;
     height: 500px;
-    border: 1px solid #333;
+    border-bottom: 15px solid greenyellow;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
+    background: linear-gradient(#87CEEB, #E0F6FF);
 }
 
 .pipe {
     position: absolute;
     bottom: 0;
     width: 80px;
+    height: 80px;
     animation: pipe-animation 1.5s infinite linear;
 }
 
@@ -28,6 +30,12 @@
 
 .jump {
     animation: jump 500ms ease-out;
+}
+
+.clouds {
+    width: 500px;
+    position: absolute;
+    animation: clouds-animation 20s infinite linear;
 }
 
 @keyframes pipe-animation {
@@ -59,5 +67,15 @@
 
     100% {
         bottom: 0;
+    }
+}
+
+@keyframes clouds-animation {
+    from {
+        right: -550px;
+    }
+
+    to {
+        right: 100%;
     }
 }
