--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@
     background: linear-gradient(#87CEEB, #E0F6FF);
 }
 
+.score {
+    position: absolute;
+    top: 30px;
+    left: 0;
+    font-size: x-large;
+}
+
 .pipe {
     position: absolute;
     bottom: 0;
